# mm_cpp

./: .gitignore  CMakeLists.txt  main.cpp  prog.out
headers/: linear_map.h  matrix.h  square_matrix.h
source/: linear_map.cpp  matrix.cpp  square_matrix.cpp
tests/: CMakeLists.txt
